# chameleon

./: .gitignore  README.md  analyze_fail.py  calibrate_home.py  collect_data.py  collect_pi05_dataset.py  cup_utils.py  domain_randomizer.py  grasp_detector.py  gripper.py  gripper_weld.py  image_utils.py  keyboard_control.py  kinematics.py  load_scene.py  lula_description.yaml  moveit_interface.py  moveit_ros_server.py  ppo_env.py  probe_lula.py  quick_rollout.py  requirements.txt  reward_engine.py  rmp_config.yaml  rmpflow_config.yaml  robot.py  robot_description.yaml  scaled_so100.urdf  setup_moveit_server.sh  simulator_loop.py  so100.urdf  so100_2p5_rmpflow_config.yaml  so100_2p5_robot_description.yaml  so100_description.yaml  so100_rmpflow_config.yaml  sticky_gripper.py  test.py  test_gr00t.py  test_ik_solver.py  test_kinematics_accuracy.py  (+8 more)
.claude/: settings.local.json
datasets/: collection_summary.json
lab/: __init__.py  grasp_detector.py  pick_place_env.py  pick_place_env_cfg.py  rewards.py
moveit_config/: CMakeLists.txt  kinematics.yaml  ompl_planning.yaml  package.xml  so100.srdf
moveit_config/config/: joint_limits.yaml  moveit_controllers.yaml  moveit_params.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml  so_arm100.ompl_planning.yaml
moveit_config/launch/: move_group.launch.py
moveit_config/urdf/: so100_ros.urdf
tests/: check_cameras.py  cycle_configurations.py  debug_cube_only.py  debug_isaac_lab.py  debug_progressive.py  debug_spawn_direct.py  keyboard_control.py  keyboard_control_lab.py  pick_place_kinematics.py  test_box_distance.py  (+7 more)
(+4 files in other folders)
